--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,3 +32,17 @@ services:
     ports:
       - "8000:8000"
     restart: always
+
+  streamlit:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.streamlit
+    container_name: coin-streamlit
+    environment:
+      INFLUXDB_URL: ${INFLUXDB_URL}
+      INFLUXDB_TOKEN: ${INFLUXDB_TOKEN}
+      INFLUXDB_ORG: ${INFLUXDB_ORG}
+      INFLUXDB_BUCKET: ${INFLUXDB_BUCKET}
+    ports:
+      - "8501:8501"
+    restart: always
