--- a/docker/Dockerfile.fastapi
+++ b/docker/Dockerfile.fastapi
@@ -11,4 +11,4 @@ COPY . /app
 
 EXPOSE 8000
 
-CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["gunicorn", "api.main:app", "--workers", "3", "--worker-class", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000"]
