--- a/docker/Dockerfile.fastapi
+++ b/docker/Dockerfile.fastapi
@@ -17,8 +17,8 @@ CMD ["gunicorn", "api.main:app", \
     "--worker-class", "uvicorn.workers.UvicornWorker", \
     "--bind", "0.0.0.0:8000", \
     # "--backlog", "2048", \
-    "--timeout", "120", \
-    "--keep-alive", "5", \
+    # "--timeout", "120", \
+    # "--keep-alive", "5", \
     "--access-logfile", "-", \
     "--error-logfile", "-", \
     "--log-level", "info"]
