--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -89,7 +89,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
-          source: "docker-compose.yml,nginx/default.conf"
+          source: "docker-compose.yml,nginx/default.conf,prometheus/prometheus.yml"
           target: "/home/${{ secrets.USERNAME }}/coin"
 
       - name: Deploy to Server
