--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - worker  # 워커가 파일을 만들어야 의미가 있으므로
 
   fastapi:
-    image: ghcr.io/dongwonmoon/coin-fastapi:latest
+    image: ghcr.io/anti-coin/anti-coin-backend-fastapi:latest
     container_name: coin-fastapi
     environment:
       INFLUXDB_URL: ${INFLUXDB_URL}
@@ -46,7 +46,7 @@ services:
       - ./static_data:/app/static_data
 
   streamlit:
-    image: ghcr.io/dongwonmoon/coin-streamlit:latest
+    image: ghcr.io/anti-coin/anti-coin-backend-streamlit:latest
     container_name: coin-streamlit
     environment:
       API_URL: ${API_URL}
@@ -55,7 +55,7 @@ services:
     restart: always
 
   worker:
-    image: ghcr.io/dongwonmoon/coin-worker:latest
+    image: ghcr.io/anti-coin/anti-coin-backend-worker:latest
     container_name: coin-worker
     environment:
       INFLUXDB_URL: ${INFLUXDB_URL}
@@ -93,6 +93,7 @@ services:
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
       - /dev/disk/:/dev/disk:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     ports:
       - "8080:8080"
     restart: always
