--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,7 +82,7 @@ services:
     restart: always
 
   cadvisor:
-    image: zcube/cadvisor:latest
+    image: gcr.io/cadvisor/cadvisor:v0.49.1
     container_name: coin-cadvisor
     privileged: true
     devices:
