--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ INFLUXDB_TOKEN=my-super-secret-auth-token
 INFLUXDB_ORG=coin
 INFLUXDB_BUCKET=market_data
 API_URL=http://localhost:8000
+DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/
