--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ INFLUXDB_ORG=coin
 INFLUXDB_BUCKET=market_data
 API_URL=http://localhost:8000
 DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/
+TARGET_SYMBOLS=BTC/USDT,ETH/USDT,XRP/USDT,SOL/USDT,DOGE/USDT
+INGEST_TIMEFRAMES=1h
+FRESHNESS_THRESHOLDS_MINUTES=1h:65,4h:250,1d:1500
