데이터 freshness check

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/
 TARGET_SYMBOLS=BTC/USDT,ETH/USDT,XRP/USDT,SOL/USDT,DOGE/USDT
 INGEST_TIMEFRAMES=1h
 FRESHNESS_THRESHOLDS_MINUTES=1h:65,4h:250,1d:1500
+FRESHNESS_HARD_THRESHOLDS_MINUTES=1h:130,4h:500,1d:3000
