Test A. 011-7 - 별도 모니터 스크립트   - 상태 평가(fresh/stale/hard_stale/corrupt/missing), 전이 감지, Discord 전송, 주기 실행   - fresh/stale -> hard_stale/corrupt/missing, hard_stale/corrupt/missing -> fresh/stale 시 Discord 알림   - 추가적인 Slack 알림 등 필요하면 구현 - 테스트 케이스 추가   - hard_stale 최초 알림, 중복 억제, recovery 알림, corrupt 판정, env 파싱 검증 - docker compose service 추가 (moniter) - 환경 변수 추가 (MONITOR_POLL_SECONDS=60)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,23 @@ services:
       - ./models:/app/models
       - ./static_data:/app/static_data
 
+  monitor:
+    image: ghcr.io/anti-coin/anti-coin-backend-worker:latest
+    container_name: coin-monitor
+    environment:
+      DISCORD_WEBHOOK_URL: ${DISCORD_WEBHOOK_URL}
+      TARGET_SYMBOLS: ${TARGET_SYMBOLS}
+      INGEST_TIMEFRAMES: ${INGEST_TIMEFRAMES}
+      FRESHNESS_THRESHOLDS_MINUTES: ${FRESHNESS_THRESHOLDS_MINUTES}
+      FRESHNESS_HARD_THRESHOLDS_MINUTES: ${FRESHNESS_HARD_THRESHOLDS_MINUTES}
+      MONITOR_POLL_SECONDS: ${MONITOR_POLL_SECONDS}
+    depends_on:
+      - worker
+    restart: always
+    volumes:
+      - ./static_data:/app/static_data
+    command: ["python", "-u", "-m", "scripts.status_monitor"]
+
   prometheus:
     image: prom/prometheus:latest
     container_name: coin-prometheus
