--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ TARGET_SYMBOLS=BTC/USDT,ETH/USDT,XRP/USDT,SOL/USDT,DOGE/USDT
 INGEST_TIMEFRAMES=1h
 FRESHNESS_THRESHOLDS_MINUTES=1h:65,4h:250,1d:1500
 FRESHNESS_HARD_THRESHOLDS_MINUTES=1h:130,4h:500,1d:3000
+MONITOR_POLL_SECONDS=60
