--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -16,7 +16,10 @@ RUN pip install --no-cache-dir -r app/requirements_worker.txt
 # 애플리케이션 코드 복사
 COPY scripts/ /app/scripts
 COPY utils/ /app/utils
+COPY docker/entrypoint_worker.sh /usr/local/bin/entrypoint_worker.sh
+
+RUN chmod +x /usr/local/bin/entrypoint_worker.sh
 
 # 실행 명령
-# umask => json 기본 권한 644
-ENTRYPOINT ["sh", "-lc", "umask 022 && exec python -u -m scripts.pipeline_worker"]
+ENTRYPOINT ["/usr/local/bin/entrypoint_worker.sh"]
+CMD ["python", "-u", "-m", "scripts.pipeline_worker"]
