자잘한 변경 사항

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ INFLUXDB_URL=http://localhost:8086
 INFLUXDB_TOKEN=my-super-secret-auth-token
 INFLUXDB_ORG=coin
 INFLUXDB_BUCKET=market_data
-API_URL=http://localhost:8000
+API_URL=http://nginx
 DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/
 TARGET_SYMBOLS=BTC/USDT,ETH/USDT,XRP/USDT,SOL/USDT,DOGE/USDT
 INGEST_TIMEFRAMES=1h
