Task A. 014 - influx-JSON 정합성 점검 - monitor가 static prediction의 freshness만 보지 않고 Influx 최신 ohlcv와 정합성까지 검사

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,6 +74,10 @@ services:
     image: ghcr.io/anti-coin/anti-coin-backend-worker:latest
     container_name: coin-monitor
     environment:
+      INFLUXDB_URL: ${INFLUXDB_URL}
+      INFLUXDB_TOKEN: ${INFLUXDB_TOKEN}
+      INFLUXDB_ORG: ${INFLUXDB_ORG}
+      INFLUXDB_BUCKET: ${INFLUXDB_BUCKET}
       DISCORD_WEBHOOK_URL: ${DISCORD_WEBHOOK_URL}
       TARGET_SYMBOLS: ${TARGET_SYMBOLS}
       INGEST_TIMEFRAMES: ${INGEST_TIMEFRAMES}
