--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ INGEST_TIMEFRAMES=1h
 FRESHNESS_THRESHOLDS_MINUTES=1h:65,4h:250,1d:1500
 FRESHNESS_HARD_THRESHOLDS_MINUTES=1h:130,4h:500,1d:3000
 MONITOR_POLL_SECONDS=60
+MONITOR_RE_ALERT_CYCLES=3
