--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,7 @@ services:
       FRESHNESS_THRESHOLDS_MINUTES: ${FRESHNESS_THRESHOLDS_MINUTES}
       FRESHNESS_HARD_THRESHOLDS_MINUTES: ${FRESHNESS_HARD_THRESHOLDS_MINUTES}
       MONITOR_POLL_SECONDS: ${MONITOR_POLL_SECONDS}
+      MONITOR_RE_ALERT_CYCLES: ${MONITOR_RE_ALERT_CYCLES}
     depends_on:
       - worker
     restart: always
