--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,9 @@ services:
       INFLUXDB_ORG: ${INFLUXDB_ORG}
       INFLUXDB_BUCKET: ${INFLUXDB_BUCKET}
       DISCORD_WEBHOOK_URL: ${DISCORD_WEBHOOK_URL}
+      TARGET_SYMBOLS: ${TARGET_SYMBOLS}
+      INGEST_TIMEFRAMES: ${INGEST_TIMEFRAMES}
+      PREDICTION_DISABLED_TIMEFRAMES: ${PREDICTION_DISABLED_TIMEFRAMES}
     depends_on:
       - influxdb
     restart: always
