--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,7 @@ services:
       INGEST_TIMEFRAMES: ${INGEST_TIMEFRAMES}
       ENABLE_MULTI_TIMEFRAMES: ${ENABLE_MULTI_TIMEFRAMES}
       PREDICTION_DISABLED_TIMEFRAMES: ${PREDICTION_DISABLED_TIMEFRAMES}
+      DISK_USAGE_PATH: ${DISK_USAGE_PATH}
     depends_on:
       - influxdb
     restart: always
