--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,35 @@
+# Core InfluxDB connection (single SoT for ingest/prediction/export pipeline).
 INFLUXDB_URL=http://localhost:8086
 INFLUXDB_TOKEN=my-super-secret-auth-token
 INFLUXDB_ORG=coin
 INFLUXDB_BUCKET=market_data
+
+# API base used by streamlit/admin clients.
 API_URL=http://nginx
+
+# Leave empty to disable external alerts during local development.
 DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/
+
+# Start with a constrained symbol set to keep Free Tier resource usage predictable.
 TARGET_SYMBOLS=BTC/USDT,ETH/USDT,XRP/USDT,SOL/USDT,DOGE/USDT
+
+# Default ingest policy: keep single base timeframe until explicit multi-timeframe enable.
 INGEST_TIMEFRAMES=1h
 ENABLE_MULTI_TIMEFRAMES=0
+
+# 1m prediction is disabled by default because cost/noise ratio is poor for this project.
 PREDICTION_DISABLED_TIMEFRAMES=1m
+
+# Disk guard path for retention/backfill safety checks.
 DISK_USAGE_PATH=/
+
+# Freshness thresholds are tuned to avoid open-candle false alarms.
 FRESHNESS_THRESHOLDS_MINUTES=1h:65,4h:250,1d:1500
 FRESHNESS_HARD_THRESHOLDS_MINUTES=1h:130,4h:500,1d:3000
+
+# Monitor poll/re-alert defaults balance detection speed and alert fatigue.
 MONITOR_POLL_SECONDS=60
 MONITOR_RE_ALERT_CYCLES=3
+
+# Publish worker default mode: run both prediction + export after ingest watermark advances.
+WORKER_PUBLISH_MODE=predict_and_export
