--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -16,6 +16,7 @@ RUN pip install --no-cache-dir -r app/requirements_worker.txt
 # 애플리케이션 코드 복사
 COPY scripts/ /app/scripts
 COPY utils/ /app/utils
+COPY workers/ /app/workers
 COPY docker/entrypoint_worker.sh /usr/local/bin/entrypoint_worker.sh
 
 RUN chmod +x /usr/local/bin/entrypoint_worker.sh
