--- a/.env.example
+++ b/.env.example
@@ -24,8 +24,8 @@ PREDICTION_DISABLED_TIMEFRAMES=1m
 DISK_USAGE_PATH=/
 
 # Freshness thresholds are tuned to avoid open-candle false alarms.
-FRESHNESS_THRESHOLDS_MINUTES=1h:65,4h:250,1d:1500
-FRESHNESS_HARD_THRESHOLDS_MINUTES=1h:130,4h:500,1d:3000
+FRESHNESS_THRESHOLDS_MINUTES=1h:65,4h:250,1d:1500,1w:11520,1M:50400
+FRESHNESS_HARD_THRESHOLDS_MINUTES=1h:130,4h:500,1d:3000,1w:23040,1M:100800
 
 # Monitor poll/re-alert defaults balance detection speed and alert fatigue.
 MONITOR_POLL_SECONDS=60
