--- a/docker/Dockerfile.streamlit
+++ b/docker/Dockerfile.streamlit
@@ -2,6 +2,7 @@ FROM python:3.11-slim
 
 # 작업 디렉토리
 WORKDIR /app
+ENV PYTHONPATH=/app
 
 # 시스템 패키지
 RUN apt-get update && apt-get install -y \
@@ -9,16 +10,16 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-COPY docker/requirements_streamlit.txt app/requirements_streamlit.txt
+COPY docker/requirements_streamlit.txt /app/requirements_streamlit.txt
 
-RUN pip install --no-cache-dir -r app/requirements_streamlit.txt
+RUN pip install --no-cache-dir -r /app/requirements_streamlit.txt
 
 # 애플리케이션 코드 복사
 COPY utils/ /app/utils
-COPY admin/ /app
+COPY admin/ /app/admin
 
 # Streamlit 포트
 EXPOSE 8501
 
 # 실행 명령
-CMD ["streamlit", "run", "app.py"]
+CMD ["streamlit", "run", "admin/app.py"]
