--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,8 @@ FRESHNESS_HARD_THRESHOLDS_MINUTES=1h:130,4h:500,1d:3000,1w:23040,1M:100800
 # Monitor poll/re-alert defaults balance detection speed and alert fatigue.
 MONITOR_POLL_SECONDS=60
 MONITOR_RE_ALERT_CYCLES=3
+# Escalation tier for long-lasting stale/unhealthy status (operator runbook trigger).
+MONITOR_ESCALATION_CYCLES=60
 
 # Publish worker default mode: run both prediction + export after ingest watermark advances.
 WORKER_PUBLISH_MODE=predict_and_export
