--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,6 +114,7 @@ services:
       FRESHNESS_HARD_THRESHOLDS_MINUTES: ${FRESHNESS_HARD_THRESHOLDS_MINUTES}
       MONITOR_POLL_SECONDS: ${MONITOR_POLL_SECONDS}
       MONITOR_RE_ALERT_CYCLES: ${MONITOR_RE_ALERT_CYCLES}
+      MONITOR_ESCALATION_CYCLES: ${MONITOR_ESCALATION_CYCLES}
     depends_on:
       - worker-ingest
       - worker-publish
