--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,9 @@ MONITOR_ESCALATION_CYCLES=60
 
 # Publish worker default mode: run both prediction + export after ingest watermark advances.
 WORKER_PUBLISH_MODE=predict_and_export
+
+# Standalone training worker defaults (C-004).
+# Keep empty to reuse TARGET_SYMBOLS, and start with primary timeframe only.
+TRAIN_SYMBOLS=
+TRAIN_TIMEFRAMES=1h
+TRAIN_LOOKBACK_LIMIT=500
