--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,10 @@ services:
     profiles:
       - ops-train
     environment:
+      INFLUXDB_URL: ${INFLUXDB_URL}
+      INFLUXDB_TOKEN: ${INFLUXDB_TOKEN}
+      INFLUXDB_ORG: ${INFLUXDB_ORG}
+      INFLUXDB_BUCKET: ${INFLUXDB_BUCKET}
       TARGET_SYMBOLS: ${TARGET_SYMBOLS}
       TRAIN_SYMBOLS: ${TRAIN_SYMBOLS}
       TRAIN_TIMEFRAMES: ${TRAIN_TIMEFRAMES}
